Do not deploy stripped jre in docker